package unitins.tp2.dto.itemPedido;

public record ItemPedidoDTO (
    Integer quantidade,
    Long idArma
){
    
}
